no embed resource

--- a/drive_times_report.qmd
+++ b/drive_times_report.qmd
@@ -3,7 +3,7 @@ title: "What time should I leave?"
 author: "A PUBH 7462 student"
 format: 
   html:
-    embed-resources: true
+    embed-resources: false
 editor: visual
 ---
 
